<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    app:cardElevation="2dp"
    android:clickable="true"
    android:id="@+id/item_card"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/userAvater"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginRight="4dp"
                    tools:srcCompat="@tools:sample/avatars" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/note_item_username"
                        android:gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                         />

                    <TextView
                        android:id="@+id/slogan"
                        android:gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                         />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:textColor="@color/gray"
                    android:id="@+id/note_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:text="@string/create_time" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
             />

        <TextView
            android:id="@+id/item_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/item_note_title"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="2"
            android:text="@string/item_note_content" />

        <Button
            android:id="@+id/item_note_delete_button"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/delete"
            app:icon="@drawable/delete" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>